# actix-web-sample

./: README.md  docker-compose.yml
api/: .gitignore  Cargo.toml  Dockerfile  dev.env
api/.sqlx/: query-47280d99192fa0692db81a1a0b0e5d4434dbebc879b572810968bbe59e50232a.json  query-86aea87423c51bf4393fb9e3e8b97c0cc5c1da5f0b0687609d88d1112c224e6f.json
api/src/: controllers.rs  domains.rs  main.rs  sql_clients.rs  usecases.rs
api/src/controllers/: data.rs  error.rs  time_helper.rs  user_slots.rs
api/src/domains/: data_clients.rs  error.rs  slot.rs  slot_range.rs
api/src/domains/data_clients/: test_client.rs  user_slot_client.rs
api/src/sql_clients/: data.rs  error.rs  sql_helper.rs  user_slots.rs
api/src/usecases/: data.rs  user_slots.rs
db/: ddl.sql
